--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -33,4 +33,24 @@
       }
     }
   }
+  .email {
+    @include primaryFont(22, $accent);
+    display: block;
+    text-align: center;
+    margin-bottom: 50px;
+    transition: all 0.5s;
+    &:hover {
+      text-shadow: 0 10px 5px rgba(0, 0, 0, 0.233);
+      transform: scale(1.1);
+      color: lighten($accent, 10%);
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .section__contact {
+    .email {
+      @include primaryFont(18, $accent);
+    }
+  }
 }
