--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -9,7 +9,7 @@ header {
   display: flex;
   align-items: center;
   margin: 10px;
-
+  
   h5 {
     display: inline-block;
     margin: 30px;
@@ -27,9 +27,11 @@ header {
 @media (max-width: 430px) {
   header {
     background: url("../../../assets/triangle-up.png") 50% 45% / contain
-        no-repeat,
-      url("../../../assets/triangle-down.png") 50% 55% / contain no-repeat,
-      url("../../../assets/overlay.png") center/cover,
-      url("../../../assets/header.jpg") center top/cover fixed;
+    no-repeat,
+    url("../../../assets/triangle-down.png") 50% 55% / contain no-repeat,
+    url("../../../assets/overlay.png") center/cover,
+    url("../../../assets/header.jpg") center top/cover fixed;
+    background-attachment:scroll;
+    
   }
 }
